# taskflow_app

./: .env.example  pyproject.toml
src/: config.py  create_superuser.py  database.py  dependencies.py  enums.py  main.py  models.py  routers.py  schemas.py
src/admin/: models.py
src/auth/: backend.py  manager.py  router.py  schemas.py  users.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 29f11f3d5773_initial.py  e7ab06c20c19_.py  fb4546378c82_.py
src/models/: __init__.py  comments.py  evaluations.py  meetings.py  memberships.py  tasks.py  teams.py  users.py
src/repositories/: comments_repository.py  evaluations_repo.py  meetings_repo.py  membership_repo.py  repository.py  tasks_repo.py  teams_repo.py  users_repo.py
src/routers/: __init__.py  calendar.py  comments.py  evaluations.py  meetings.py  memberships.py  tasks.py  teams.py
src/schemas/: __init__.py  comments.py  common_schemas.py  evaluations.py  meetings.py  memberships.py  tasks.py  teams.py
src/services/: comments_service.py  evaluations_service.py  meetings_service.py  memberships_service.py  tasks_service.py  teams_service.py  users_service.py
tests/: conftest.py  test_comments.py  test_evaluations.py  test_meetings.py  test_memberships.py  test_tasks.py  test_teams.py
