[project]
name = "taskflow-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Rybachenko",email = "andreirybachenko1999@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi-users[sqlalchemy] (>=15.0.4,<16.0.0)",
    "sqladmin[full] (>=0.23.0,<0.24.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]
